Actually finished fixing the horizontal scroll bar issue so that it doesn't briefly appear when closing the menu

--- a/css/nav.scss
+++ b/css/nav.scss
@@ -92,6 +92,7 @@ body {
   font-family: var(--font-primary);
   font-size: var(--font-size);
   line-height: var(--line-height);
+  overflow-x: hidden;
 }
 
 h1 {
